# kithara

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/: architecture.md  old-world-audio-reference.md
scripts/: make_icon.py  release.sh
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: vgmstream-cli-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog.rs  commands.rs  lib.rs  main.rs  models.rs  player.rs
src-tauri/src/extractor/: bnk_parser.rs  converter.rs  metadata.rs  mod.rs
src/lib/: api.ts
src/lib/components/: CategorySidebar.svelte  ExtractionProgress.svelte  NowPlaying.svelte  Search.svelte  SoundButton.svelte  SoundGrid.svelte  UnitFilter.svelte
src/lib/components/music/: LCDDisplay.svelte  PlayIndicator.svelte  PlaylistPanel.svelte  SeekBar.svelte  SmallDigits.svelte  TextTicker.svelte  TransportControls.svelte  Visualizer.svelte  VolumeSlider.svelte  WinampPlayer.svelte  index.ts
src/lib/stores/: sounds.svelte.ts
src/lib/types/: Category.ts  ExtractionOptions.ts  ExtractionState.ts  ExtractionStatus.ts  MusicTrack.ts  PlaybackStatus.ts  Sound.ts  UnitType.ts  index.ts
src/routes/: +layout.ts  +page.svelte
src/routes/music/: +page.svelte
