[package]
name = "kithara"
version = "0.2.1"
description = "Old World Soundboard"
authors = ["you"]
edition = "2021"

[lib]
name = "kithara_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rodio = { version = "0.19", features = ["vorbis"] }
quick-xml = "0.37"
walkdir = "2"
byteorder = "1"
thiserror = "2"
directories = "5"
tokio = { version = "1", features = ["process", "fs"] }

[dev-dependencies]
ts-rs = "10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
